--- a/attorneys.html
+++ b/attorneys.html
@@ -191,8 +191,9 @@
           </p>
           <div class="dets-row">
             <div class="bottom-group" data-aos="fade-down" data-aos-delay="100">
-              <h3>Areas of Practice</h3>
+              <h3 style="text-align: center">Areas of Practice</h3>
               <div class="line"></div>
+              <h5 style="text-align: center">Family Law</h5>
               <p style="text-indent: 0">
                 • Divorce and Legal Separation
                 <br />
@@ -204,7 +205,7 @@
               </p>
             </div>
             <div class="bottom-group" data-aos="fade-down" data-aos-delay="150">
-              <h3>Education</h3>
+              <h3 style="text-align: center">Education</h3>
               <div class="line"></div>
               <p style="text-indent: 0">
                 • University of Denver,
@@ -227,7 +228,7 @@
               </p>
             </div>
             <div class="bottom-group" data-aos="fade-down" data-aos-delay="200">
-              <h3>
+              <h3 style="text-align: center">
                 Memberships
                 <div class="line"></div>
               </h3>
@@ -352,7 +353,7 @@
             <div class="bottom-group" data-aos="fade-down" data-aos-delay="100">
               <h3 style="text-align: center">Areas of Practice</h3>
               <div class="line"></div>
-              <h5>Criminal Defense</h5>
+              <h5 style="text-align: center">Criminal Defense</h5>
               <p style="text-indent: 0">
                 • Felony & Misdemeanor Crimes
                 <br />
@@ -364,7 +365,7 @@
                 <br />
                 • Victim Representation
               </p>
-              <h5>Family Law</h5>
+              <h5 style="text-align: center">Family Law</h5>
               <p style="text-indent: 0">
                 • Divorce and Legal Separation
                 <br />
