attorney individual photos

--- a/attorneys.html
+++ b/attorneys.html
@@ -99,11 +99,7 @@
           <div class="lawyer-span" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom">
               <div>
-                <div class="title-cont">
-                  <h1>Sarah M. Neiley</h1>
-                  <h2>Managing Partner</h2>
-                </div>
-                <img src="./assets/images/sarah-span2.jpg" />
+                <img src="./assets/images/sarah-span3.png" />
               </div>
             </div>
           </div>
@@ -252,11 +248,7 @@
           <div class="lawyer-span" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom">
               <div>
-                <div class="title-cont right">
-                  <h1>Mackenzie J. Morris</h1>
-                  <h2>Partner</h2>
-                </div>
-                <img src="./assets/images/mackenzie-span.jpg" />
+                <img src="./assets/images/mackenzie-span2.png" />
               </div>
             </div>
           </div>
@@ -560,11 +552,7 @@
           <div class="lawyer-span" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom">
               <div>
-                <div class="title-cont right">
-                  <h1>Mary Ann Leonardi</h1>
-                  <h2>Paralegal</h2>
-                </div>
-                <img src="./assets/images/mar-span.jpg" />
+                <img src="./assets/images/mar-span2.png" />
               </div>
             </div>
           </div>
