--- a/attorneys.html
+++ b/attorneys.html
@@ -99,7 +99,13 @@
           <div class="lawyer-span" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom">
               <div>
-                <img src="./assets/images/sarah-span3.png" />
+                <picture>
+                  <source
+                    media="(max-width: 799px)"
+                    srcset="./assets/images/sarah-shortspan.png"
+                  />
+                  <img src="./assets/images/sarah-span3.png" alt="Sarah Span" />
+                </picture>
               </div>
             </div>
           </div>
@@ -248,7 +254,16 @@
           <div class="lawyer-span" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom">
               <div>
-                <img src="./assets/images/mackenzie-span2.png" />
+                <picture>
+                  <source
+                    media="(max-width: 799px)"
+                    srcset="./assets/images/mackenzie-shortspan.png"
+                  />
+                  <img
+                    src="./assets/images/mackenzie-span2.png"
+                    alt="Mackenzie Span"
+                  />
+                </picture>
               </div>
             </div>
           </div>
@@ -552,7 +567,16 @@
           <div class="lawyer-span" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom">
               <div>
-                <img src="./assets/images/mar-span2.png" />
+                <picture>
+                  <source
+                    media="(max-width: 799px)"
+                    srcset="./assets/images/mar-shortspan.png"
+                  />
+                  <img
+                    src="./assets/images/mar-span2.png"
+                    alt="Mary Ann Span"
+                  />
+                </picture>
               </div>
             </div>
           </div>
