firstline and education adjust

--- a/attorneys.html
+++ b/attorneys.html
@@ -119,6 +119,7 @@
         >
           <p>
             <span
+              class="first-line"
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
             >
               Sarah represents clients in sophisticated Family Law Matters
@@ -277,6 +278,7 @@
         >
           <p>
             <span
+              class="first-line"
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
             >
               Mackenzie is a dedicated Criminal Defense and Family Law Attorney
@@ -591,6 +593,7 @@
           <p>
             <span
               style="font-size: 26px; font-weight: bold; color: var(--c-dark)"
+              class="first-line"
             >
               Mary Ann is one of the firm’s paralegals in both Family Law and
               Criminal Defense matters.
