paralegals margin top mar

--- a/attorneys.html
+++ b/attorneys.html
@@ -565,7 +565,7 @@
 
         <!-- mar -->
 
-        <div id="mar" class="row lawyer" style="margin-top: 75px">
+        <div id="mar" class="row lawyer">
           <div class="lawyer-span" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom">
               <div>
