--- a/index.html
+++ b/index.html
@@ -809,92 +809,95 @@
       </div>
     </section> -->
 
-    <!-- contact -->
-    <section id="contact" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div
-            class="col-12 text-center"
-            data-aos="fade-down"
-            data-aos-delay="150"
-          >
-            <div class="section-title">
-              <h1 class="display-4 fw-semibold">CONTACT</h1>
-              <div class="line"></div>
-              <p>
-                To speak with our attorneys, please schedule a consultation. We
-                look forward to speaking with you.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div
-          class="row justify-content-center"
-          data-aos="fade-down"
-          data-aos-delay="250"
-        >
-          <div class="col-lg-8">
-            <form
-              action="https://api.web3forms.com/submit"
-              method="POST"
-              class="row g-3 p-lg-5 p-4 theme-shadow"
-            >
-              <div class="form-group col-lg-6">
-                <input
-                  type="hidden"
-                  name="access_key"
-                  value="cbf589d6-f737-4697-9136-922e5fa95a11"
-                />
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="First Name"
-                  required
-                />
-              </div>
-              <div class="form-group col-lg-6">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Last Name"
-                  required
-                />
-              </div>
-              <div class="form-group col-lg-12">
-                <input
-                  type="email"
-                  class="form-control"
-                  placeholder="Email Address"
-                  required
-                />
-              </div>
-              <div class="form-group col-lg-12">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Subject"
-                  required
-                />
-              </div>
-              <div class="form-group col-lg-12">
-                <textarea
-                  name="message"
-                  class="form-control"
-                  rows="5"
-                  placeholder="Message"
-                  required
-                ></textarea>
-              </div>
-
-              <div class="form-group col-lg-12 d-grid">
-                <button class="btn btn-brand">Send Messsage</button>
-              </div>
-            </form>
-          </div>
+   <!-- contact -->
+<section id="contact" class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div
+        class="col-12 text-center"
+        data-aos="fade-down"
+        data-aos-delay="150"
+      >
+        <div class="section-title">
+          <h1 class="display-4 fw-semibold">CONTACT</h1>
+          <div class="line"></div>
+          <p>
+            To speak with our attorneys, please schedule a consultation. We
+            look forward to speaking with you.
+          </p>
         </div>
       </div>
-    </section>
+    </div>
+    <div
+      class="row justify-content-center"
+      data-aos="fade-down"
+      data-aos-delay="250"
+    >
+      <div class="col-lg-8">
+        <form
+          action="https://api.web3forms.com/submit"
+          method="POST"
+          class="row g-3 p-lg-5 p-4 theme-shadow"
+        >
+          <div class="form-group col-lg-6">
+            <input
+              type="hidden"
+              name="access_key"
+              value="cbf589d6-f737-4697-9136-922e5fa95a11"
+            />
+            <input
+              type="text"
+              name="first_name"
+              class="form-control"
+              placeholder="First Name"
+              required
+            />
+          </div>
+          <div class="form-group col-lg-6">
+            <input
+              type="text"
+              name="last_name"
+              class="form-control"
+              placeholder="Last Name"
+              required
+            />
+          </div>
+          <div class="form-group col-lg-12">
+            <input
+              type="email"
+              name="email"
+              class="form-control"
+              placeholder="Email Address"
+              required
+            />
+          </div>
+          <div class="form-group col-lg-12">
+            <input
+              type="text"
+              name="subject"
+              class="form-control"
+              placeholder="Subject"
+              required
+            />
+          </div>
+          <div class="form-group col-lg-12">
+            <textarea
+              name="message"
+              class="form-control"
+              rows="5"
+              placeholder="Message"
+              required
+            ></textarea>
+          </div>
 
+          <div class="form-group col-lg-12 d-grid">
+            <button class="btn btn-brand">Send Message</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
     <!-- news -->
     <!-- <section id="news" class="section-padding bg-light">
       <div class="container">
