added locations and new row of team

--- a/index.html
+++ b/index.html
@@ -85,10 +85,13 @@
             <!-- <li class="nav-item">
               <a class="nav-link" href="#reviews">Reviews</a>
             </li> -->
-
             <!-- <li class="nav-item">
               <a class="nav-link" href="#news">News</a>
             </li> -->
+
+            <li class="nav-item">
+              <a class="nav-link" href="#locations">Locations</a>
+            </li>
           </ul>
           <a href="#contact" class="btn btn-brand ms-lg-3">Contact</a>
         </div>
@@ -215,8 +218,10 @@
       </div>
     </section>
     <!-- legal team - speakers -->
+
     <section id="speakers" class="section-padding">
       <div class="container">
+        <!-- title row -->
         <div class="row">
           <div
             class="col-12 text-center"
@@ -229,7 +234,9 @@
             </div>
           </div>
         </div>
-        <div class="row g-4 text-center">
+        <!-- team row -->
+        <div class="row g-4 text-center" style="margin-bottom: 50px">
+          <!-- Sarah -->
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom sarah">
               <div class="image-zoom-wrapper">
@@ -244,11 +251,11 @@
             </div>
             <div class="name-box">
               <h4>Sarah M. Neiley</h4>
-              <h4 class="mb-0 role">Managing Partner</h4>
+              <h4 class="mb-0 role">Partner</h4>
               <!-- <h5 class="mb-0">Family Law</h5> -->
             </div>
           </div>
-
+          <!-- Mackenzie -->
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
             <div class="speaker image-zoom mack">
               <div class="image-zoom-wrapper">
@@ -312,6 +319,72 @@
               <h4 class="mb-0 role">Paralegal</h4>
             </div>
           </div>
+        </div>
+        <div
+          class="row g-4 text-center"
+          style="display: flex; justify-content: center"
+        >
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
+            <div class="speaker image-zoom sarah">
+              <div class="image-zoom-wrapper">
+                <a href="./attorneys.html#sarah-link">
+                  <img src="./assets/images/comingsoon.png" />
+                </a>
+              </div>
+              <div class="speaker-content">
+                <h4>Read More About</h4>
+                <h4 class="hover-name">Sarah M. Neiley</h4>
+              </div>
+            </div>
+            <div class="name-box">
+              <h4>Sarah M. Neiley</h4>
+              <h4 class="mb-0 role">Partner</h4>
+              <!-- <h5 class="mb-0">Family Law</h5> -->
+            </div>
+          </div>
+
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
+            <div class="speaker image-zoom mack">
+              <div class="image-zoom-wrapper">
+                <a href="./attorneys.html#mackenzie">
+                  <img
+                    src="./assets/images/comingsoon.png"
+                    style="transform: scale(1.15)"
+                  />
+                </a>
+              </div>
+              <div class="speaker-content">
+                <h4>Read More About</h4>
+                <h4 class="hover-name">Mackenzie J. Morris</h4>
+              </div>
+            </div>
+            <div class="name-box">
+              <h4>Mackenzie J. Morris</h4>
+              <h4 class="mb-0 role">Partner</h4>
+              <!-- <h5 class="mb-0">Criminal Defense & <br />Family Law</h5> -->
+            </div>
+          </div>
+
+          <!-- <div class="col-md-3" data-aos="fade-down" data-aos-delay="350">
+            <div class="speaker image-zoom zoe">
+              <div class="image-zoom-wrapper">
+                <a href="./attorneys.html#zoe">
+                  <img
+                    src="./assets/images/zoe1.jpg"
+                    style="transform: scale(1.2)"
+                  />
+                </a>
+              </div>
+              <div class="speaker-content">
+                <h4>Read More About</h4>
+                <h4 class="hover-name">Zoe M. Dotson</h4>
+              </div>
+            </div>
+            <div class="name-box">
+              <h4>Zoe M. Dotson</h4>
+              <h4 class="mb-0 role">Paralegal</h4>
+            </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -467,6 +540,80 @@
               <p>What We Do</p>
             </div>
           </div> -->
+        </div>
+      </div>
+    </section>
+    <!-- locations -->
+    <section id="locations" class="section-padding bg-light">
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-12 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
+            <div class="section-title">
+              <h1 class="display-4 fw-semibold">AVL NEWS</h1>
+              <div class="line"></div>
+              <p>Stay up to date on AVL news.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/scales.jpeg" />
+              </div>
+              <h5 class="mt-4">
+                "Navigating the Legal Maze: Expertise in Family Practice and
+                Criminal Defense"
+              </h5>
+              <p>
+                Delve into the comprehensive legal services offered by our
+                esteemed law firm, specializing in family law and criminal
+                defense. With a team of experienced attorneys...
+              </p>
+              <a href="#">READ MORE</a>
+            </div>
+          </div>
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/court.jpeg" />
+              </div>
+              <h5 class="mt-4">
+                "Protecting Your Family, Defending Your Rights: A Closer Look at
+                Our Legal Practice"
+              </h5>
+              <p>
+                Discover the intersection of family law and criminal defense at
+                our reputable law firm. Our skilled attorneys offer
+                compassionate support and zealous advocacy for clients dealing
+                with sensitive family matters and challenging legal issues.
+                Whether you're facing divorce...
+              </p>
+              <a href="#">READ MORE</a>
+            </div>
+          </div>
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/legal.jpeg" />
+              </div>
+              <h5 class="mt-4">
+                "Empowering Clients, Delivering Results: The Hallmarks of Our
+                Legal Services"
+              </h5>
+              <p>
+                Uncover the pillars of excellence that define our law firm's
+                approach to serving clients in family law and criminal defense
+                cases. With a focus on empowerment, education, and strategic
+                advocacy, we strive to...
+              </p>
+              <a href="#">READ MORE</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
