--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
           </div>
         </div>
-        <!-- team row -->
+        <!-- team row1 -->
         <div class="row g-4 text-center" style="margin-bottom: 50px">
           <!-- Sarah -->
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
@@ -298,7 +298,33 @@
               <h4 class="mb-0 role">Paralegal</h4>
             </div>
           </div> -->
+          <!-- Megan -->
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
+            <div class="speaker image-zoom mack">
+              <div class="image-zoom-wrapper">
+                <a href="./attorneys.html#megan">
+                  <img src="./assets/images/comingsoon.png" />
+                </a>
+              </div>
+              <div class="speaker-content">
+                <h4>Read More About</h4>
+                <h4 class="hover-name">Megan Bibliowicz</h4>
+              </div>
+            </div>
+            <div class="name-box">
+              <h4>Megan Bibliowicz</h4>
+              <h4 class="mb-0 role">Attorney - Of Counsel</h4>
+              <!-- <h5 class="mb-0">Family Law</h5> -->
+            </div>
+          </div>
+        </div>
+        <!-- team row2 -->
 
+        <div
+          class="row g-4 text-center"
+          style="display: flex; justify-content: center"
+        >
+          <!-- MaryAnn -->
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="450">
             <div class="speaker image-zoom mar">
               <div class="image-zoom-wrapper">
@@ -319,34 +345,11 @@
               <h4 class="mb-0 role">Paralegal</h4>
             </div>
           </div>
-        </div>
-        <div
-          class="row g-4 text-center"
-          style="display: flex; justify-content: center"
-        >
-          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
-            <div class="speaker image-zoom sarah">
-              <div class="image-zoom-wrapper">
-                <a href="./attorneys.html#sarah-link">
-                  <img src="./assets/images/comingsoon.png" />
-                </a>
-              </div>
-              <div class="speaker-content">
-                <h4>Read More About</h4>
-                <h4 class="hover-name">Sarah M. Neiley</h4>
-              </div>
-            </div>
-            <div class="name-box">
-              <h4>Sarah M. Neiley</h4>
-              <h4 class="mb-0 role">Partner</h4>
-              <!-- <h5 class="mb-0">Family Law</h5> -->
-            </div>
-          </div>
-
+          <!-- Sydney -->
           <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
             <div class="speaker image-zoom mack">
               <div class="image-zoom-wrapper">
-                <a href="./attorneys.html#mackenzie">
+                <a href="./attorneys.html#sydney">
                   <img
                     src="./assets/images/comingsoon.png"
                     style="transform: scale(1.15)"
@@ -355,12 +358,12 @@
               </div>
               <div class="speaker-content">
                 <h4>Read More About</h4>
-                <h4 class="hover-name">Mackenzie J. Morris</h4>
+                <h4 class="hover-name">Sydney Bockelman</h4>
               </div>
             </div>
             <div class="name-box">
-              <h4>Mackenzie J. Morris</h4>
-              <h4 class="mb-0 role">Partner</h4>
+              <h4>Sydney Bockelman</h4>
+              <h4 class="mb-0 role">Paralegal</h4>
               <!-- <h5 class="mb-0">Criminal Defense & <br />Family Law</h5> -->
             </div>
           </div>
@@ -543,6 +546,7 @@
         </div>
       </div>
     </section>
+
     <!-- locations -->
     <section id="locations" class="section-padding bg-light">
       <div class="container">
@@ -553,65 +557,142 @@
             data-aos-delay="150"
           >
             <div class="section-title">
-              <h1 class="display-4 fw-semibold">AVL NEWS</h1>
+              <h1 class="display-4 fw-semibold">LOCATIONS</h1>
               <div class="line"></div>
-              <p>Stay up to date on AVL news.</p>
+              <p>Serving Colorado's Western Slope and Mountain Communities</p>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
-            <div class="speaker image-zoom">
-              <div class="image-zoom-wrapper">
-                <img src="./assets/images/scales.jpeg" />
+        <!-- Service Area Accordion -->
+        <div class="row mt-5 mb-5">
+          <div class="col-12" data-aos="fade-up" data-aos-delay="350">
+            <div class="accordion" id="serviceAreaAccordion">
+              <div class="accordion-item shadow-sm">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#countiesList"
+                    aria-expanded="false"
+                    aria-controls="countiesList"
+                  >
+                    <strong>View All 28 Counties We Serve</strong>
+                  </button>
+                </h2>
+                <div
+                  id="countiesList"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#serviceAreaAccordion"
+                >
+                  <div class="accordion-body">
+                    <div class="row text-center">
+                      <div class="col-md-3 col-6">
+                        <ul class="list-unstyled">
+                          <li>Garfield County</li>
+                          <li>Pitkin County</li>
+                          <li>Rio Blanco County</li>
+                          <li>Eagle County</li>
+                          <li>Mesa County</li>
+                          <li>Summit County</li>
+                          <li>La Plata County</li>
+                        </ul>
+                      </div>
+                      <div class="col-md-3 col-6">
+                        <ul class="list-unstyled">
+                          <li>Montezuma County</li>
+                          <li>Delta County</li>
+                          <li>Hinsdale County</li>
+                          <li>Mineral County</li>
+                          <li>Dolores County</li>
+                          <li>San Juan County</li>
+                          <li>San Miguel County</li>
+                        </ul>
+                      </div>
+                      <div class="col-md-3 col-6">
+                        <ul class="list-unstyled">
+                          <li>Gunnison County</li>
+                          <li>Montrose County</li>
+                          <li>Ouray County</li>
+                          <li>Archuleta County</li>
+                          <li>Rio Grande County</li>
+                          <li>Alamosa County</li>
+                          <li>Routt County</li>
+                        </ul>
+                      </div>
+                      <div class="col-md-3 col-6">
+                        <ul class="list-unstyled">
+                          <li>Lake County</li>
+                          <li>Chaffee County</li>
+                          <li>Fremont County</li>
+                          <li>Grand County</li>
+                          <li>Boulder County</li>
+                          <li>Gilpin County</li>
+                          <li>Clear Creek County</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <h5 class="mt-4">
-                "Navigating the Legal Maze: Expertise in Family Practice and
-                Criminal Defense"
-              </h5>
-              <p>
-                Delve into the comprehensive legal services offered by our
-                esteemed law firm, specializing in family law and criminal
-                defense. With a team of experienced attorneys...
-              </p>
-              <a href="#">READ MORE</a>
             </div>
           </div>
-          <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
-            <div class="speaker image-zoom">
-              <div class="image-zoom-wrapper">
-                <img src="./assets/images/court.jpeg" />
+        </div>
+        <div class="row g-4 justify-content-center">
+          <!-- Carbondale Office -->
+          <div class="col-md-6" data-aos="fade-down" data-aos-delay="150">
+            <div class="card h-100 shadow-sm">
+              <div class="ratio ratio-4x3">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3096.8234!2d-107.2111!3d39.4022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8741489f1d7c7f7d%3A0x123456789!2s320%20Main%20St%2C%20Carbondale%2C%20CO%2081623!5e0!3m2!1sen!2sus!4v1234567890"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                >
+                </iframe>
               </div>
-              <h5 class="mt-4">
-                "Protecting Your Family, Defending Your Rights: A Closer Look at
-                Our Legal Practice"
-              </h5>
-              <p>
-                Discover the intersection of family law and criminal defense at
-                our reputable law firm. Our skilled attorneys offer
-                compassionate support and zealous advocacy for clients dealing
-                with sensitive family matters and challenging legal issues.
-                Whether you're facing divorce...
-              </p>
-              <a href="#">READ MORE</a>
+              <div class="card-body text-center">
+                <h4 class="card-title">Roaring Fork Valley Office</h4>
+                <p class="card-text">
+                  320 Main Street, Suite 200<br />
+                  Carbondale, CO 81623
+                </p>
+                <a
+                  href="https://maps.google.com/?q=320+Main+Street+Suite+200+Carbondale+CO+81623"
+                  target="_blank"
+                  class="btn btn-outline-primary get-directions-btn"
+                  >Get Directions</a
+                >
+              </div>
             </div>
           </div>
-          <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
-            <div class="speaker image-zoom">
-              <div class="image-zoom-wrapper">
-                <img src="./assets/images/legal.jpeg" />
+          <!-- Telluride Office -->
+          <div class="col-md-6" data-aos="fade-down" data-aos-delay="250">
+            <div class="card h-100 shadow-sm">
+              <div class="ratio ratio-4x3">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3096.8234!2d-107.8123!3d37.9375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8741489f1d7c7f7d%3A0x987654321!2s119%20W%20Colorado%20Ave%2C%20Telluride%2C%20CO%2081435!5e0!3m2!1sen!2sus!4v1234567890"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                >
+                </iframe>
               </div>
-              <h5 class="mt-4">
-                "Empowering Clients, Delivering Results: The Hallmarks of Our
-                Legal Services"
-              </h5>
-              <p>
-                Uncover the pillars of excellence that define our law firm's
-                approach to serving clients in family law and criminal defense
-                cases. With a focus on empowerment, education, and strategic
-                advocacy, we strive to...
-              </p>
-              <a href="#">READ MORE</a>
+              <div class="card-body text-center">
+                <h4 class="card-title">Telluride Office</h4>
+                <p class="card-text">
+                  119A West Colorado Avenue<br />
+                  Telluride, CO 81435
+                </p>
+                <a
+                  href="https://maps.google.com/?q=119A+West+Colorado+Avenue+Telluride+CO+81435"
+                  target="_blank"
+                  class="btn btn-outline-primary get-directions-btn"
+                  >Get Directions</a
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -1014,6 +1095,15 @@
                   name="email"
                   class="form-control"
                   placeholder="Email Address"
+                  required
+                />
+              </div>
+              <div class="form-group col-lg-12">
+                <input
+                  type="phone"
+                  name="phone"
+                  class="form-control"
+                  placeholder="Phone Number"
                   required
                 />
               </div>
