--- a/attorneys.html
+++ b/attorneys.html
@@ -806,6 +806,9 @@
                 <li>
                   <a href="./index.html#offerings">Our Practice</a>
                 </li>
+                <li>
+                  <a href="./privacy.html">Privacy Policy</a>
+                </li>
                 <!-- <li>
                   <a href="#reviews">Reviews</a>
                 </li> -->
