--- a/index.html
+++ b/index.html
@@ -1242,6 +1242,9 @@
                 <li>
                   <a href="#offerings">Our Practice</a>
                 </li>
+                <li>
+                  <a href="./privacy.html">Privacy Policy</a>
+                </li>
                 <!-- <li>
                   <a href="#reviews">Reviews</a>
                 </li> -->
