--- a/privacy.html
+++ b/privacy.html
@@ -75,46 +75,99 @@
       </div>
     </nav>
 
-    <!-- careers  -->
-    <section id="about" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div
-            class="col-12 text-center"
-            data-aos="fade-down"
-            data-aos-delay="50"
-          >
-            <div class="section-title">
-              <h1 class="display-4 fw-semibold">CAREERS AT NEILEY & MORRIS</h1>
-              <div class="line"></div>
-              <h4>
-                Neiley & Morris is rapidly expanding to meet growing client
-                demands.
-              </h4>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-between align-items-center">
-          <div class="col-lg-6" data-aos="fade-down" data-aos-delay="150">
-            <img src="./assets/images/flower.jpg" alt="about" />
-          </div>
-          <div
-            class="col-lg-5 career-blurb"
-            data-aos="fade-down"
-            data-aos-delay="150"
-          >
-            <h1 class="abouth1">Join our team.</h1>
-            <h5 class="mt-3 mb-4">
-              We are always happy to connect with people who believe they are
-              aligned with the firm. We are currently open to taking on new
-              attorneys into our firm with a wide range of expertise. We would
-              love for you to contact us
-              <a href="mailto: office@neileymorris.com "> here</a> with your
-              resume and information about yourself.
-            </h5>
-          </div>
-        </div>
-      </div>
+    <!-- policy
+       -->
+    <section id="privacy" class="section-padding">
+      <p>
+        This privacy policy explains how Neiley &amp; Morris, LLC (“the Firm”)
+        collects, uses and discloses information about you when you use our
+        websites, mobile applications, and other online services. If you have
+        any questions about this privacy policy, please contact the Firm
+        directly.
+      </p>
+      <p>
+        <strong>Data collection and cookies.</strong> Features or partners of
+        this website may collect data including, but not limited to: the number
+        of visitors to the site, the time spent on the site and pages clicked,
+        the types of devices used to access the site, and the Internet Protocol
+        (IP) addresses of visitors. The Firm uses this information to improve
+        this website and the Firm&#39;s marketing efforts. This data is
+        collected by sending cookies (or similar tracking technology) to your
+        device. Information such as your name or email address generally is not
+        collected via these cookies and other tracking technology; if you
+        previously provided such personally identifiable information through
+        this website, however, cookies may be tied to such information.
+        Aggregate cookie and tracking information may be shared with third
+        parties; and this privacy policy does not cover third parties’ use of
+        cookies. You may configure your device to limit or prevent access by
+        cookies, such as to notify you when you receive a cookie, to block all
+        cookies, or to delete existing cookies.
+      </p>
+      <p>
+        <strong>Partners and features that collect information.</strong> The
+        Firm&#39;s website marketing partners or features that collect data as
+        described above may include, among others, Google Analytics, other
+        analytics programs, and Google AdWords remarketing service. Remarketing
+        involves tracking devices that have visited this website in order to
+        display ads for the Firm&#39;s services on other websites. Use these
+        links to learn
+        <a href="https://policies.google.com/technologies/partner-sites">
+          how Google uses data it collects</a
+        >, to
+        <a href="https://tools.google.com/dlpage/gaoptout/"
+          >prevent Google Analytics from using data from your device</a
+        >, or to
+        <a
+          href="https://support.google.com/My-Ad-Center-Help/answer/12155764?hl=en&visit_id=639003167930224520-2059694156&rd=1"
+        >
+          opt out of Google’s interest-based ads.
+        </a>
+      </p>
+      <p>
+        By using this Website, you consent to the collection and use of
+        information as specified above. Any Privacy Policy updates will be
+        posted on this page
+      </p>
+      <p>OR</p>
+      <p>
+        <strong>Information Collection, Sharing and Use.</strong> The Firm is
+        the sole owner of the information collected by its website. The Firm
+        only has access to the information that you voluntarily provide to us.
+        The Firm will not rent, sell or disseminate this information to anyone.
+        The Firm uses the information provided to us through the website to
+        respond to you regarding the reason you contacted the Firm. The Firm
+        will distribute the information internally only to the correct person at
+        our firm that can address your issue. SLH will not share your
+        information with any third party.
+      </p>
+      <p>
+        <strong>Information Access &amp; Control.</strong> Although we employ
+        reasonable security measures, the transmission of information via the
+        internet is not completely secure or private. If you have any questions
+        about the security of personal information we collect, please contact
+        the Firm directly.
+      </p>
+      <p>
+        <strong>SMS Messaging.</strong> The Firm offers clients the choice to
+        opt in to receive text messages related to your case, appointments, and
+        Firm services. The Firm does not require its clients to use this
+        service, and such service will only be offered to clients through
+        attorney assigned to your matter based on your case needs. Clients who
+        opt into SMS messaging may opt out at any time by texting “STOP” or by
+        contacting our office by phone or email. The Firm does not share phone
+        numbers with anyone. Message and data rates may apply.
+      </p>
+      <p>
+        <strong> External Links. </strong>This website may contain links to
+        other websites. The Firm is not responsible for the content or privacy
+        policies of other websites to which it links.
+      </p>
+      <p>
+        <strong> Changes to this policy.</strong> The Firm may update this
+        policy. If updates are made, the Firm will change the modification date
+        below.
+      </p>
+      <p><strong>Last modified.</strong> November 2025</p>
     </section>
 
     <!-- footer -->
@@ -179,10 +232,6 @@
               <ul class="footer-box">
                 <li>320 Main Street, Suite 200</li>
                 <li>Carbondale, CO 81623</li>
-                <li>-</li>
-                <li>119A Colorado Ave</li>
-                <li>Telluride, CO 81435</li>
-                <li>-</li>
                 <li>970-963-6363</li>
                 <li>office@neileymorris.com</li>
                 <li>www.neileymorris.com</li>
