--- a/index.html
+++ b/index.html
@@ -1271,6 +1271,10 @@
               <ul class="footer-box">
                 <li>320 Main Street, Suite 200</li>
                 <li>Carbondale, CO 81623</li>
+                <li>-</li>
+                <li>119A Colorado Ave</li>
+                <li>Telluride, CO 81435</li>
+                <li>-</li>
                 <li>970-963-6363</li>
                 <li>office@neileymorris.com</li>
                 <li>www.neileymorris.com</li>
